<resources>
    <string name="app_name">时光猫</string>
    <string name="titleGrab">抢单</string>
    <string name="navAll">全部</string>
    <string name="navFollowingShot">跟拍</string>
    <string name="navCamera">摄像</string>
    <string name="navMakeUp">跟妆</string>
    <string name="titleSchedule">排期</string>
    <string name="btnSwitchView"><u>切换显示</u></string>
    <string name="titleCalendar">%1$d年%2$d月</string>
    <string name="tab_unfinished">待完成</string>
    <string name="tab_finished">已完成</string>
    <string name="price_photography">￥%1$d</string>
    <string name="phasePrepare">准备阶段</string>
    <string name="phaseFinished">已完成</string>
    <string name="remainingSum">余额</string>
    <string name="creditScore">时光信用</string>
    <string name="invitationCode">邀请码</string>
    <string name="keyChargeSetting">收费设置</string>
    <string name="keyCashPledge">我的押金</string>
    <string name="keyDataProduction">我的资料、作品</string>
    <string name="keyAttention">我的关注</string>
    <string name="keyWorkNotice">工作须知</string>
    <string name="keyServiceTel">客服电话</string>
    <string name="keySystemSetting">系统设置</string>
    <string name="titleChargingSetting">收费设置</string>
    <!--<string name="chargeStandard"><![CDATA[<u>费用标准</u>]]></string>-->
    <string name="chargeStandard"><u>费用标准</u></string>
    <string name="yourPositionIs">您的职位为</string>
    <string name="keyPosition">，级别为</string>
    <string name="yourChargingStandardIs">您的收费标准为</string>
    <string name="moneyChargingStandard">￥%1$d</string>
    <string name="unitChargingStandard">/套系</string>
    <string name="describeChargingStand">根据您的资历，您可以收取指定的资历费为</string>
    <string name="hintChargingStandard">资历费一次性收取，不按套系计算</string>
    <string name="sure">确定</string>
    <string name="titleBaseInfo">基本信息</string>
    <string name="uploadYourHead"><u>上传头像</u></string>
    <string name="titleCashPledge">押金</string>
    <string name="cashPledge">押金</string>
    <string name="cashPledgeMoney">%1$.2f(%2$.2f可退)</string>
    <string name="hintCashPledge">您退还租借的服装后，可申请退还押金\n\n租借服装时，押金不足需充值押金</string>
    <string name="rechargePledge">充值押金</string>
    <string name="depositRefund">退押金</string>
    <string name="titlePaymentDeposit">支付押金</string>
    <string name="topUpDeposit">充值押金</string>
    <string name="warningDeposit">押金在退还商品后可全额退款，支付即视为同意《时光猫押金协议》</string>
    <string name="paymentMode">支付方式</string>
    <string name="theBalancePayment">余额支付</string>
    <string name="aliPayExpressPayment">支付宝快捷支付</string>
    <string name="weChatPay">微信支付</string>
    <string name="unionPay">银联支付</string>
    <string name="actualPayment">实际支付</string>
    <string name="moneyRMB">￥%.2f</string>
    <string name="confirmPayment">确认支付</string>
    <string name="titleDepositRefund">退押金</string>
    <string name="refundedAmount">退还金额</string>
    <string name="hintRefundedAmount">可退￥0</string>
    <string name="allRefund"><u>全部退还</u></string>
    <string name="refundedChannel">退还渠道</string>
    <string name="aliAccount">支付宝账号</string>
    <string name="hintAliAccount">尚未填写提现账号</string>
    <string name="titleProlie">我的资料</string>
    <string name="tabProfile">我的资料</string>
    <string name="tabWork">我的作品</string>
    <string name="keyShop">所属门店</string>
    <string name="hintType">请输入内容</string>
    <string name="keyTeacherType">老师类型</string>
    <string name="keyPostType">岗位类型</string>
    <string name="keyCity">所在城市</string>
    <string name="keyDetailAddress">详细地址</string>
    <string name="keyUrgencyLinkMan">紧急联系人</string>
    <string name="keyPhone">联系电话</string>
    <string name="keyEquipment">自有设备</string>
    <string name="keySelfIntroduction">自我介绍</string>
    <string name="hintIntroduction">请用第三人称简短描述自己</string>
    <string name="addWork">添加作品</string>
    <string name="titleAttention">我的关注</string>
    <string name="teacher">老师</string>
    <string name="user">用户</string>
    <string name="titleNoviceHelp">新手帮助</string>
    <string name="titleServiceTel">客服电话</string>
    <string name="titleSystemSetting">系统设置</string>
    <string name="pushToggle">推送开关</string>
    <string name="modifyPassWord">修改登录密码</string>
    <string name="titlePasswordModification">修改密码</string>
    <string name="hint_type_password">请输入登录密码</string>
    <string name="onDuty">上班</string>
    <string name="offDuty">下班</string>
    <string name="hintRechargeAmount">请添加充值金额</string>
    <string name="hintPayType">请选择支付方式</string>
</resources>
