<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.qi.commonview.view.title.TitleView
                android:id="@+id/titleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:leftIcon="@drawable/leftarrow"
                app:titleText="@string/titleChargingSetting">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="@dimen/margin_views"
                    android:text="@string/chargeStandard"
                    android:textColor="@color/common_red" />
            </com.qi.commonview.view.title.TitleView>

            <View
                android:id="@+id/dividerView"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/titleView"
                android:background="@color/common_divider" />

            <LinearLayout
                android:id="@+id/professionDescribeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dividerView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yourPositionIs" />

                <TextView
                    android:id="@+id/professionView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/common_red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keyPosition" />

                <TextView
                    android:id="@+id/positionView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/common_red" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/professionDescribeView"
                android:layout_centerHorizontal="true"
                android:text="@string/yourChargingStandardIs" />

            <LinearLayout
                android:id="@+id/chargingStandardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/professionDescribeView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moneyChargingStandard"
                    android:textColor="@color/common_red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unitChargingStandard"
                    android:textColor="@color/common_red"
                    android:textSize="10sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/chargingStandardView"
                android:layout_marginTop="30dp"
                android:background="@color/common_divider" />

            <TextView
                android:id="@+id/lableChargingStandardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chargingStandardView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:text="@string/describeChargingStand" />

            <LinearLayout
                android:id="@+id/chargingStandardListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lableChargingStandardView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:divider="@drawable/divider_charging_standard"
                android:dividerPadding="@dimen/margin_views"
                android:orientation="horizontal"
                android:showDividers="middle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_charging_standard_white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_charging_standard_red" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chargingStandardListView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/hintChargingStandard" />
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_circular_rect_red"
        android:text="@string/sure"
        android:textColor="@color/common_white"
        android:gravity="center"
        android:padding="@dimen/padding_content"
        android:layout_margin="@dimen/margin_views"/>
</LinearLayout>