<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/common_padding">

            <RelativeLayout
                android:id="@+id/remainingView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/remainingSumView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/remainingSumView"
                    android:layout_toEndOf="@+id/remainingSumView"
                    android:text="@string/yuan"
                    android:textSize="10sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/remainingView"
                android:layout_centerHorizontal="true"
                android:text="@string/remainingSum" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/creditScoreView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/creditScoreView"
                android:layout_centerHorizontal="true"
                android:text="@string/creditScore" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/InvitationCodeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/InvitationCodeView"
                android:layout_centerHorizontal="true"
                android:text="@string/invitationCode" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin"
        android:padding="@dimen/padding_content">

        <ImageView
            android:id="@+id/leftIcon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_controller" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/chargeSettingView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_views"
            android:layout_toEndOf="@+id/leftIcon"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:text="@string/keyChargeSetting" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:background="@color/bg_divider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_content">

        <ImageView
            android:id="@+id/cashPledgeIcon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/coin" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_views"
            android:layout_toEndOf="@+id/cashPledgeIcon"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:text="@string/keyCashPledge" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_views"
        android:padding="@dimen/padding_content">

        <ImageView
            android:id="@+id/cabinetIcon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_cabinet" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/dataView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_views"
            android:layout_toEndOf="@+id/cabinetIcon"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:text="@string/keyDataProduction" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:background="@color/bg_divider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_content">

        <ImageView
            android:id="@+id/heartIcon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/heart2" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_views"
            android:layout_toEndOf="@+id/heartIcon"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:text="@string/keyAttention" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:background="@color/bg_divider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_content">

        <ImageView
            android:id="@+id/questionIcon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_question" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_views"
            android:layout_toEndOf="@+id/questionIcon"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:text="@string/keyWorkNotice" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:background="@color/bg_divider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_content">

        <ImageView
            android:id="@+id/telephoneIcon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/telephone" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_views"
            android:layout_toEndOf="@+id/telephoneIcon"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:text="@string/keyServiceTel" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_views"
        android:padding="@dimen/padding_content">

        <ImageView
            android:id="@+id/settingsIcon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/settings" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_views"
            android:layout_toEndOf="@+id/settingsIcon"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:text="@string/keySystemSetting" />
    </RelativeLayout>
</LinearLayout>